K/kubernetes-policy-controller-Wb00v5PK1z6yqH6/kubernetes-policy-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubernetes-policy-controller
  namespace: Wb00v5PK1z6yqH6
  labels:
    app.kubernetes.io/name: kubernetes-policy-controller
    helm.sh/chart: kubernetes-policy-controller-0.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: kubernetes-policy-controller
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubernetes-policy-controller
  namespace: Wb00v5PK1z6yqH6
  labels:
    app.kubernetes.io/name: kubernetes-policy-controller
    helm.sh/chart: kubernetes-policy-controller-0.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-policy-controller
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-policy-controller
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/config: b948a7076e8b2fdb8e02eb270c5834953474adcad2bb7d1f98fee05b8b800573
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:0.10.1
          imagePullPolicy: IfNotPresent
          args:
            - run
            - --server
            - --addr=http://127.0.0.1:8181
        - name: kube-mgmt
          image: openpolicyagent/kube-mgmt:0.6
          imagePullPolicy: IfNotPresent
          args:
            - --replicate-cluster=v1/namespaces
            - --replicate=extensions/v1beta1/ingresses
            - --replicate=v1/pods
        - name: kubernetes-policy-controller
          image: nikhilbh/kubernetes-policy-controller:1.2
          imagePullPolicy: IfNotPresent
          args:
            - --addr=0.0.0.0:443
            - --addr=http://127.0.0.1:7925
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: opa-server
          resources: {}
      volumes:
        - name: opa-server
          secret:
            secretName: release-name-kubernetes-policy-controller-cert
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: release-name-kubernetes-policy-controller
  labels:
    app.kubernetes.io/name: kubernetes-policy-controller
    helm.sh/chart: kubernetes-policy-controller-0.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: mutating.webhook.kubernetes-policy-controller
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        opa-mutation: enabled
    rules:
      - apiGroups:
          - '*'
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - '*'
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJakNDQWdxZ0F3SUJBZ0lSQU9iS29tUlpsbGtBc2hGQzkrQldTUDh3RFFZSktvWklodmNOQVFFTEJRQXcKR3pFWk1CY0dBMVVFQXhNUWIzQmhMV0ZrYldsemMybHZiaTFqWVRBZUZ3MHlNakEyTVRJeE5EQTJNVEJhRncwegpNakEyTURreE5EQTJNVEJhTUJzeEdUQVhCZ05WQkFNVEVHOXdZUzFoWkcxcGMzTnBiMjR0WTJFd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFETDVrVDhKaFF1TWhnbW16d1E3cERnbFE4ZE80ZEcKSnMrRmxMcFQ5UkdQd0RKdHg3RitVQ0hLc2hHL2FZTXF0MCtUUk5OVnBHL3lLV0N1VUtaS2N1R05GQ0RRWnZkWQpDdkkrY2FrNnVT [...]
      service:
        name: release-name-kubernetes-policy-controller
        namespace: default
        path: /v1/admit
